-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 12.0.1
-
298bd125c (12.0)
Markdown editor's preview goes entirly blank after clicking a link. The document behind the link is not shown, even if this is a local file, which QtCreator could open and show. Even worse it's not possible to recover from this state: The preview just remains blank, even after closing and reopening the Markdown file.
For Gerrit Dashboard: QTCREATORBUG-30120 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
528194,3 | Markdown: Fix that file links were shown as blank in preview | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |