Markdown: Fix that file links were shown as blank in preview

Handle links ourselves since QTextBrowser doesn't do what we want.

- anchors without file path just jump to anchor
- local files (potentially relative to the markdown file) open in
  Qt Creator (anchors ignored)
- otherwise QDesktopServices is used

Fixes: QTCREATORBUG-30120
Change-Id: I9a68607a0b32255ec075c698a1265cc6d1387e0c
Reviewed-by: David Schulz <david.schulz@qt.io>